--- a/css/responsive.css
+++ b/css/responsive.css
@@ -620,6 +620,7 @@
         font-family: "RobotoRegular";
         font-size: 18px;
         line-height: 22px;
+        color:pink;
     }
 
     .popup-header h5{
