--- a/css/responsive.css
+++ b/css/responsive.css
@@ -262,8 +262,7 @@
     }
 
     h4{ /*texto abaixo título*/
-        font-family: "Roboto";
-        font-weight: 360;
+        font-family: "RobotoRegular";
         font-size: 22px;
         line-height: 26px;
     }
