--- a/css/responsive.css
+++ b/css/responsive.css
@@ -851,6 +851,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+        justify-content: center;
     }
 
     .hideMobile{
