--- a/css/responsive.css
+++ b/css/responsive.css
@@ -616,13 +616,15 @@
     }
 
     h4{ /*texto abaixo título no hero*/
-        font-family: "RobotoRegular" !important;
+        font-family: "RobotoRegular";
         font-size: 18px;
         line-height: 22px;
+        font-weight: normal;
     }
 
     h5{
         font-size: 26px;
+        font-weight: normal;
     }
 
     p{
@@ -799,6 +801,7 @@
 
     .content-contact p{
         margin-top:10%;
+        font-size: 16px !important;
     }
 
     .contact-logos{
@@ -823,9 +826,13 @@
     .footer{
         height:30vh;
         display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-top{
+        margin-bottom: 3%;
     }
 
     .footer-top h1{
@@ -841,18 +848,19 @@
     .footer-bottom{
         margin-bottom: 2%;
         display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
     }
 
     .footer-footer{
-        display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-        justify-content: center;
+        text-align: center;
     }
+
+    .footer-footer p{
+        margin-bottom:2%;
+    }
+
 
     .hideMobile{
         display:none;
@@ -870,10 +878,10 @@
         margin-top: 6%;
 
         display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    align-items: baseline;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        align-items: baseline;
     }
     
     .footer-top .logo{
