--- a/css/navbar.css
+++ b/css/navbar.css
@@ -226,7 +226,8 @@ footer{
 }
 
 .footer{
-    height:100%;
+    min-height: auto;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
