--- a/css/responsive.css
+++ b/css/responsive.css
@@ -824,7 +824,8 @@
         align-items: center !important;
     }
     .footer{
-        height:30vh;
+        min-height: auto;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
